--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div>
         <img data-img>
     </div>
-    <script src="scripts/index.js"
+    <script src="scripts/index.js"></script>
 </body>
 </html>
