--- a/index.html
+++ b/index.html
@@ -8,8 +8,27 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <div>
-        <img data-img>
+    <h1>super kids</h1>
+    <div class="thumb-container">
+        <div class="thumb-item"></div>
+            <img src="images/1.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/2.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/3.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/4.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/5.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/6.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/7.jpeg" alt="">
+        <div class="thumb-item"></div>
+            <img src="images/8.jpeg" alt="">
+    </div>
+    <div class="looks-good">
+        <img src="" alt="kids" data-img>
     </div>
     <script src="scripts/index.js"></script>
 </body>
