--- a/index.html
+++ b/index.html
@@ -9,26 +9,38 @@
 </head>
 <body>
     <h1>super kids</h1>
-    <div class="thumb-container">
-        <div class="thumb-item"></div>
-            <img src="images/1.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/2.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/3.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/4.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/5.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/6.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/7.jpeg" alt="">
-        <div class="thumb-item"></div>
-            <img src="images/8.jpeg" alt="">
+    <!-- 
+        i need to generate a .thumb-item div and an img element for every image URL in my images array.
+
+        i will append each of those .thumb-item divs to the .thumb-container.
+     -->
+    <div class="thumb-container" data-container>
+        <!-- <div class="thumb-item"><img src="images/1.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/2.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/3.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/4.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/5.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/6.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/7.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/8.jpeg" alt="kids">
+        </div>
+        <div class="thumb-item"><img src="images/9.jpeg" alt="kids">
+        </div> -->
     </div>
     <div class="looks-good">
-        <img src="" alt="kids" data-img>
+        <!-- 
+            this is the "output for when the user clicks a thumbnail". 
+            i will modify the src attribute and set it to the same src 
+            as the thumbnail that got clicked. 
+        -->
+        <img data-output src="" alt="">
     </div>
     <script src="scripts/index.js"></script>
 </body>
