--- a/index.html
+++ b/index.html
@@ -9,19 +9,12 @@
 </head>
 <body>
     <h1>super kids</h1>
+    <hr>
     <!-- 
         i need to generate a .thumb-item div and an img element for every image URL in my images array.
 
         i will append each of those .thumb-item divs to the .thumb-container.
      -->
-        <div class="looks-good">
-            <!-- 
-                    this is the "output for when the user clicks a thumbnail". 
-                    i will modify the src attribute and set it to the same src 
-                    as the thumbnail that got clicked. 
-                -->
-            <img data-img src="" alt="">
-        </div>
     <div class="thumb-container" data-container>
         <!-- <div class="thumb-item"><img data-img src="images/1.jpeg" alt="kids">
         </div>
@@ -42,6 +35,15 @@
         <div class="thumb-item"><img data-img src="images/9.jpeg" alt="kids">
         </div> -->
     </div>
-    <script src="scripts/index.js"></script>
+    <hr>
+        <div class="looks-good">
+            <!-- 
+                        this is the "output for when the user clicks a thumbnail". 
+                        i will modify the src attribute and set it to the same src 
+                        as the thumbnail that got clicked. 
+                    -->
+        <img data-img src="" alt="">
+    </div>
+    <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
