--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-    <h1>super kids</h1>
-    <hr>
+    <header>
+        <h1>super kids</h1>
+        <hr>
+    </header>
     <!-- 
         i need to generate a .thumb-item div and an img element for every image URL in my images array.
 
         i will append each of those .thumb-item divs to the .thumb-container.
      -->
-    <div class="thumb-container" data-container>
+    <div class="thumb-container">
         <!-- <div class="thumb-item"><img data-img src="images/1.jpeg" alt="kids">
         </div>
         <div class="thumb-item"><img data-img src="images/2.jpeg" alt="kids">
@@ -38,12 +40,12 @@
     <hr>
         <div class="looks-good">
             <!-- 
-                        this is the "output for when the user clicks a thumbnail". 
-                        i will modify the src attribute and set it to the same src 
-                        as the thumbnail that got clicked. 
-                    -->
-        <img data-img src="" alt="">
-    </div>
+            this is the "output for when the user clicks a thumbnail". 
+            i will modify the src attribute and set it to the same src 
+            as the thumbnail that got clicked. 
+            -->
+        <img src="" alt="">
+        </div>
     <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
