--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div> -->
     </div>
     <hr>
+    <div class="modal">
         <div class="looks-good">
             <!-- 
             this is the "output for when the user clicks a thumbnail". 
@@ -46,6 +47,7 @@
             -->
         <img src="" alt="">
         </div>
+    </div>
     <script type="text/javascript" src="scripts/index.js"></script>
 </body>
 </html>
