removes comments and files unrelated to project

--- a/index.html
+++ b/index.html
@@ -18,24 +18,7 @@
         i will append each of those .thumb-item divs to the .thumb-container.
      -->
     <div class="thumb-container">
-        <!-- <div class="thumb-item"><img data-img src="images/1.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/2.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/3.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/4.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/5.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/6.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/7.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/8.jpeg" alt="kids">
-        </div>
-        <div class="thumb-item"><img data-img src="images/9.jpeg" alt="kids">
-        </div> -->
+        <!-- where the thumbnails will be rendered -->
     </div>
     <hr>
         <div class="looks-good">
