--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
+        <link rel="stylesheet" href="stylesheets/index.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="stylesheets/index.css">
-</head>
+    <body>
+        <header>
+            <h1>super pics</h1>
+            <hr />
+        </header>
+        <!--
+            i need to generate a .thumb-item div and an img element for every image URL in my images array.
 
-<body>
-    <header>
-        <h1>super kids</h1>
-        <hr>
-    </header>
-    <!-- 
-        i need to generate a .thumb-item div and an img element for every image URL in my images array.
-
-        i will append each of those .thumb-item divs to the .thumb-container.
-     -->
-    <div class="thumb-container">
-        <!-- where the thumbnails will be rendered -->
-    </div>
-    <hr>
-    <div class="looks-good">
-        <!-- 
-            this is the "output for when the user clicks a thumbnail". 
-            i will modify the src attribute and set it to the same src 
-            as the thumbnail that got clicked. 
+            i will append each of those .thumb-item divs to the .thumb-container.
+        -->
+        <div class="thumb-container">
+            <!-- where the thumbnails will be rendered -->
+        </div>
+        <hr />
+        <div class="looks-good">
+            <!--
+                this is the "output for when the user clicks a thumbnail".
+                i will modify the src attribute and set it to the same src
+                as the thumbnail that got clicked.
             -->
-        <img src="" alt="">
-    </div>
-    <script type="text/javascript" src="scripts/index.js"></script>
-</body>
-
+            <img src="" alt="" />
+            <p>
+                <strong>use keyboard arrows to switch between photos.</strong>
+            </p>
+        </div>
+        <script type="text/javascript" src="scripts/index.js"></script>
+    </body>
 </html>
